removed fake data, updated systemuser entity

--- a/src/main/webapp/app/entities/systemuser/detail/systemuser-detail.component.html
+++ b/src/main/webapp/app/entities/systemuser/detail/systemuser-detail.component.html
@@ -18,6 +18,18 @@
         <dd>
           <span>{{ systemuser.entryDate | formatMediumDate }}</span>
         </dd>
+        <dt><span>Name</span></dt>
+        <dd>
+          <span>{{ systemuser.name }}</span>
+        </dd>
+        <dt><span>Social Security Number</span></dt>
+        <dd>
+          <span>{{ systemuser.socialSecurityNumber }}</span>
+        </dd>
+        <dt><span>Job Description</span></dt>
+        <dd>
+          <span>{{ systemuser.jobDescription }}</span>
+        </dd>
         <dt><span>User</span></dt>
         <dd>
           <span>{{ systemuser.user?.login }}</span>
