--- a/src/main/webapp/app/entities/systemuser/update/systemuser-update.component.html
+++ b/src/main/webapp/app/entities/systemuser/update/systemuser-update.component.html
@@ -33,6 +33,35 @@
         </div>
 
         <div class="form-group">
+          <label class="form-control-label" for="field_name">Name</label>
+          <input type="text" class="form-control" name="name" id="field_name" data-cy="name" formControlName="name" />
+        </div>
+
+        <div class="form-group">
+          <label class="form-control-label" for="field_socialSecurityNumber">Social Security Number</label>
+          <input
+            type="text"
+            class="form-control"
+            name="socialSecurityNumber"
+            id="field_socialSecurityNumber"
+            data-cy="socialSecurityNumber"
+            formControlName="socialSecurityNumber"
+          />
+        </div>
+
+        <div class="form-group">
+          <label class="form-control-label" for="field_jobDescription">Job Description</label>
+          <input
+            type="text"
+            class="form-control"
+            name="jobDescription"
+            id="field_jobDescription"
+            data-cy="jobDescription"
+            formControlName="jobDescription"
+          />
+        </div>
+
+        <div class="form-group">
           <label class="form-control-label" for="field_user">User</label>
           <select class="form-control" id="field_user" data-cy="user" name="user" formControlName="user">
             <option *ngIf="!editForm.get('user')!.value" [ngValue]="null" selected></option>
