fixed sql insertion error / removed one-to-one relationship systemuser to user

--- a/src/main/webapp/app/entities/targetsystemcredentials/list/targetsystemcredentials.component.html
+++ b/src/main/webapp/app/entities/targetsystemcredentials/list/targetsystemcredentials.component.html
@@ -35,7 +35,7 @@
           <th scope="col" jhiSortBy="id"><span>ID</span> <fa-icon icon="sort"></fa-icon></th>
           <th scope="col" jhiSortBy="username"><span>Username</span> <fa-icon icon="sort"></fa-icon></th>
           <th scope="col" jhiSortBy="password"><span>Password</span> <fa-icon icon="sort"></fa-icon></th>
-          <th scope="col" jhiSortBy="systemuser.entryDate"><span>Systemuser</span> <fa-icon icon="sort"></fa-icon></th>
+          <th scope="col" jhiSortBy="systemuser.name"><span>Systemuser</span> <fa-icon icon="sort"></fa-icon></th>
           <th scope="col" jhiSortBy="targetsystem.name"><span>Targetsystem</span> <fa-icon icon="sort"></fa-icon></th>
           <th scope="col"></th>
         </tr>
@@ -50,7 +50,7 @@
           <td>
             <div *ngIf="targetsystemcredentials.systemuser">
               <a [routerLink]="['/systemuser', targetsystemcredentials.systemuser?.id, 'view']">{{
-                targetsystemcredentials.systemuser?.entryDate
+                targetsystemcredentials.systemuser?.name
               }}</a>
             </div>
           </td>
