show user name instead of entry date

--- a/src/main/webapp/app/entities/targetsystemcredentials/update/targetsystemcredentials-update.component.html
+++ b/src/main/webapp/app/entities/targetsystemcredentials/update/targetsystemcredentials-update.component.html
@@ -39,7 +39,7 @@
               "
               *ngFor="let systemuserOption of systemusersSharedCollection; trackBy: trackSystemuserById"
             >
-              {{ systemuserOption.entryDate }}
+              {{ systemuserOption.name }}
             </option>
           </select>
         </div>
