--- a/src/main/webapp/app/account/password/password.component.html
+++ b/src/main/webapp/app/account/password/password.component.html
@@ -2,8 +2,7 @@
   <div class="row justify-content-center">
     <div class="col-md-8" *ngIf="account$ | async as account">
       <h2>
-        Password for [<strong>{{ account.login }}</strong
-        >]
+        Password for <strong>{{ account.login }}</strong>
       </h2>
 
       <div class="alert alert-success" *ngIf="success">
