--- a/src/main/webapp/app/account/settings/settings.component.html
+++ b/src/main/webapp/app/account/settings/settings.component.html
@@ -2,8 +2,7 @@
   <div class="row justify-content-center">
     <div class="col-md-8">
       <h2 *ngIf="account">
-        User settings for [<strong>{{ account.login }}</strong
-        >]
+        User settings for <strong>{{ account.login }}</strong>
       </h2>
 
       <div class="alert alert-success" *ngIf="success">
