--- a/src/main/webapp/app/entities/department/detail/department-detail.component.html
+++ b/src/main/webapp/app/entities/department/detail/department-detail.component.html
@@ -1,6 +1,29 @@
-<div class="row justify-content-center">
+<style>
+  .data_table {
+    margin: auto;
+    width: 50%;
+    grid-column-gap: 1px;
+    grid-gap: 1px;
+  }
+
+  .data_table dt {
+    margin: auto;
+    text-align: right;
+    hyphens: auto;
+    float: right;
+    display: inline-block;
+    width: 200px;
+  }
+
+  .data_table dd {
+    text-align: center;
+    width: 200px;
+  }
+</style>
+
+<div class="row justify-content-center data_table">
   <div class="col-8">
-    <div *ngIf="department">
+    <div *ngIf="department" style="text-align: center">
       <h2 data-cy="departmentDetailsHeading"><span>Department</span></h2>
 
       <hr />
@@ -9,17 +32,17 @@
 
       <jhi-alert></jhi-alert>
 
-      <dl class="row-md jh-entity-details">
-        <dt><span>ID</span></dt>
-        <dd>
+      <dl class="row-md jh-entity-details" style="text-align: center">
+        <dt class="col-md-6"><span>ID</span></dt>
+        <dd class="col-md-6">
           <span>{{ department.id }}</span>
         </dd>
-        <dt><span>Name</span></dt>
-        <dd>
+        <dt class="col-md-6"><span>Name</span></dt>
+        <dd class="col-md-6">
           <span>{{ department.name }}</span>
         </dd>
-        <dt><span>Targetsystem</span></dt>
-        <dd>
+        <dt class="col-md-6"><span>Targetsystem</span></dt>
+        <dd class="col-md-6">
           <span *ngFor="let targetsystem of department.targetsystems; let last = last">
             <a [routerLink]="['/targetsystem', targetsystem?.id, 'view']">{{ targetsystem.name }}</a
             >{{ last ? '' : ', ' }}
