footer Detail changes

--- a/src/main/webapp/app/entities/department/list/department.component.html
+++ b/src/main/webapp/app/entities/department/list/department.component.html
@@ -1,3 +1,9 @@
+<style>
+  table {
+    text-align: center;
+  }
+</style>
+
 <div>
   <h2 id="page-heading" data-cy="DepartmentHeading">
     <span>Departments</span>
