--- a/src/main/webapp/app/entities/nav-entities/nav-entities.component.html
+++ b/src/main/webapp/app/entities/nav-entities/nav-entities.component.html
@@ -1,9 +1,4 @@
-<style>
-  .navbarzwei {
-    background-color: #5c8aca;
-  }
-</style>
-<nav data-cy="navbar" class="navbar navbar-dark navbar-expand-md navbarzwei">
+<nav data-cy="navbar" class="navbar navbar-dark navbar-expand-md bg-dark navbarzwei">
   <ul class="navbar-nav ml-auto">
     <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
       <a
