--- a/src/main/webapp/app/entities/systemuser/list/systemuser.component.html
+++ b/src/main/webapp/app/entities/systemuser/list/systemuser.component.html
@@ -1,3 +1,8 @@
+<style>
+  table {
+    text-align: center;
+  }
+</style>
 <div>
   <h2 id="page-heading" data-cy="SystemuserHeading">
     <span>Systemusers</span>
@@ -100,3 +105,4 @@
     </div>
   </div>
 </div>
+<router-outlet name="footer"></router-outlet>
