--- a/src/main/webapp/app/entities/targetsystemcredentials/list/targetsystemcredentials.component.html
+++ b/src/main/webapp/app/entities/targetsystemcredentials/list/targetsystemcredentials.component.html
@@ -1,3 +1,8 @@
+<style>
+  table {
+    text-align: center;
+  }
+</style>
 <div>
   <h2 id="page-heading" data-cy="TargetsystemcredentialsHeading">
     <span>Targetsystemcredentials</span>
