--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -9,5 +9,5 @@
     <router-outlet></router-outlet>
   </div>
 
-  <jhi-footer></jhi-footer>
+  <jhi-footer *ngIf="showFooter"></jhi-footer>
 </div>
