Download CSV with Button

--- a/src/main/webapp/app/entities/targetsystemcredentials/list/targetsystemcredentials.component.html
+++ b/src/main/webapp/app/entities/targetsystemcredentials/list/targetsystemcredentials.component.html
@@ -3,6 +3,7 @@
     text-align: center;
   }
 </style>
+<script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
 <div>
   <h2 id="page-heading" data-cy="TargetsystemcredentialsHeading">
     <span>Targetsystemcredentials</span>
@@ -91,6 +92,11 @@
               <button type="submit" (click)="delete(targetsystemcredentials)" class="btn btn-danger btn-sm" data-cy="entityDeleteButton">
                 <fa-icon icon="times"></fa-icon>
                 <span class="d-none d-md-inline">Delete</span>
+              </button>
+
+              <button type="submit" class="btn btn-info btn-sm" (click)="downloadSvg(targetsystemcredentials.id!)">
+                <i class="fas fa-download"></i>
+                <span class="d-none d-md-inline"> Download {{ targetsystemcredentials.id }} </span>
               </button>
             </div>
           </td>
