--- a/src/main/webapp/app/entities/department/list/department.component.html
+++ b/src/main/webapp/app/entities/department/list/department.component.html
@@ -51,6 +51,10 @@
           <td>{{ department.name }}</td>
           <td class="text-right">
             <div class="btn-group">
+              <button type="submit" class="btn btn-info btn-sm">
+                <fa-icon icon="download"></fa-icon>
+                <span class="d-none d-md-inline">Download</span>
+              </button>
               <button
                 type="submit"
                 [routerLink]="['/department', department.id, 'view']"
