--- a/src/main/webapp/app/entities/targetsystem/update/targetsystem-update.component.html
+++ b/src/main/webapp/app/entities/targetsystem/update/targetsystem-update.component.html
@@ -17,6 +17,31 @@
         </div>
       </div>
 
+      <div class="form-group">
+        <label class="form-control-label" for="field_name">Typ</label>
+        <select class="custom-select" [(ngModel)]="type" (change)="selectType($event.target)">
+          <option class="dropdown-item" disabled>auswählen</option>
+          <option class="dropdown-item" value="{{ x }}" *ngFor="let x of types">{{ x }}</option>
+        </select>
+        You selected {{ type }}
+      </div>
+
+      <div *ngIf="type == 'CSV'"></div>
+
+      <div *ngIf="type == 'Datenbank'">
+        <div class="form-group">
+          <label class="form-control-label" for="field_url">Url</label>
+          <input type="text" class="form-control" name="url" id="field_url" data-cy="url" formControlName="url" />
+        </div>
+        <div class="form-group">
+          <label class="form-control-label" for="field_username">Username</label>
+          <input type="text" class="form-control" name="username" id="field_username" data-cy="username" formControlName="username" />
+        </div>
+        <div class="form-group">
+          <label class="form-control-label" for="field_pw">Password</label>
+          <input type="text" class="form-control" name="password" id="field_pw" data-cy="password" formControlName="password" />
+        </div>
+      </div>
       <div>
         <button type="button" id="cancel-save" data-cy="entityCreateCancelButton" class="btn btn-secondary" (click)="previousState()">
           <fa-icon icon="ban"></fa-icon>&nbsp;<span>Cancel</span>
