--- a/src/main/webapp/app/entities/targetsystem/detail/targetsystem-detail.component.html
+++ b/src/main/webapp/app/entities/targetsystem/detail/targetsystem-detail.component.html
@@ -40,6 +40,10 @@
         <dd>
           <span>{{ targetsystem.name }}</span>
         </dd>
+        <dt><span>Type</span></dt>
+        <dd>
+          <span>{{ systemtype }}</span>
+        </dd>
       </dl>
 
       <button type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
