--- a/src/main/webapp/app/entities/targetsystemcredentials/update/targetsystemcredentials-update.component.html
+++ b/src/main/webapp/app/entities/targetsystemcredentials/update/targetsystemcredentials-update.component.html
@@ -16,15 +16,29 @@
         <div class="form-group">
           <label class="form-control-label" for="field_username">Username</label>
           <input type="text" class="form-control" name="username" id="field_username" data-cy="username" formControlName="username" />
+          <div *ngIf="editForm.get('username')!.invalid && (editForm.get('username')!.dirty || editForm.get('username')!.touched)">
+            <small class="form-text text-danger" *ngIf="editForm.get('username')?.errors?.required"> This field is required. </small>
+            <small class="form-text text-danger" *ngIf="editForm.get('username')?.errors?.minlength">
+              This field is required to be at least 6 characters
+            </small>
+          </div>
         </div>
 
         <div class="form-group">
           <label class="form-control-label" for="field_password">Password</label>
-          <input type="text" class="form-control" name="password" id="field_password" data-cy="password" formControlName="password" />
+          <input
+            [type]="show ? 'text' : 'password'"
+            class="form-control"
+            name="password"
+            id="field_password"
+            data-cy="password"
+            formControlName="password"
+          /><br />
+          <button type="button" class="btn btn-secondary" (click)="password()">Show Password</button>
           <div *ngIf="editForm.get('password')!.invalid && (editForm.get('password')!.dirty || editForm.get('password')!.touched)">
             <small class="form-text text-danger" *ngIf="editForm.get('password')?.errors?.required"> This field is required. </small>
             <small class="form-text text-danger" *ngIf="editForm.get('password')?.errors?.minlength">
-              This field is required to be at least 6 characters.
+              This field is required to be at least 8 characters.
             </small>
           </div>
         </div>
