--- a/src/main/webapp/app/entities/targetsystemcredentials/list/targetsystemcredentials.component.html
+++ b/src/main/webapp/app/entities/targetsystemcredentials/list/targetsystemcredentials.component.html
@@ -94,7 +94,7 @@
                 <span class="d-none d-md-inline">Delete</span>
               </button>
 
-              <button type="submit" class="btn btn-info btn-sm" (click)="downloadSvg(targetsystemcredentials.id!)">
+              <button type="submit" class="btn btn-info btn-sm" (click)="downloadCsv(targetsystemcredentials.targetsystem!)">
                 <i class="fas fa-download"></i>
                 <span class="d-none d-md-inline"> Download {{ targetsystemcredentials.id }} </span>
               </button>
