--- a/src/main/webapp/app/entities/targetsystem/list/targetsystem.component.html
+++ b/src/main/webapp/app/entities/targetsystem/list/targetsystem.component.html
@@ -1,11 +1,3 @@
-<style>
-  table {
-    text-align: center;
-  }
-  .right {
-    text-align: right;
-  }
-</style>
 <div>
   <h2 id="page-heading" data-cy="TargetsystemHeading">
     <span>Targetsystems</span>
@@ -42,6 +34,10 @@
         <tr jhiSort [(predicate)]="predicate" [(ascending)]="ascending" (sortChange)="loadPage()">
           <th scope="col" jhiSortBy="id"><span>ID</span> <fa-icon icon="sort"></fa-icon></th>
           <th scope="col" jhiSortBy="name"><span>Name</span> <fa-icon icon="sort"></fa-icon></th>
+          <th scope="col" jhiSortBy="type"><span>Type</span> <fa-icon icon="sort"></fa-icon></th>
+          <th scope="col" jhiSortBy="url"><span>Url</span> <fa-icon icon="sort"></fa-icon></th>
+          <th scope="col" jhiSortBy="password"><span>Password</span> <fa-icon icon="sort"></fa-icon></th>
+          <th scope="col" jhiSortBy="username"><span>Username</span> <fa-icon icon="sort"></fa-icon></th>
           <th scope="col"></th>
         </tr>
       </thead>
@@ -51,7 +47,11 @@
             <a [routerLink]="['/targetsystem', targetsystem.id, 'view']">{{ targetsystem.id }}</a>
           </td>
           <td>{{ targetsystem.name }}</td>
-          <td class="right">
+          <td>{{ targetsystem.type }}</td>
+          <td>{{ targetsystem.url }}</td>
+          <td>{{ targetsystem.password }}</td>
+          <td>{{ targetsystem.username }}</td>
+          <td class="text-right">
             <div class="btn-group">
               <button
                 type="submit"
