Generalisieren, Attribute Type, Url, PW, Username

--- a/src/main/webapp/app/entities/targetsystem/detail/targetsystem-detail.component.html
+++ b/src/main/webapp/app/entities/targetsystem/detail/targetsystem-detail.component.html
@@ -40,6 +40,22 @@
         <dd>
           <span>{{ targetsystem.name }}</span>
         </dd>
+        <dt><span>Type</span></dt>
+        <dd>
+          <span>{{ targetsystem.type }}</span>
+        </dd>
+        <dt><span>Url</span></dt>
+        <dd>
+          <span>{{ targetsystem.url }}</span>
+        </dd>
+        <dt><span>Password</span></dt>
+        <dd>
+          <span>{{ targetsystem.password }}</span>
+        </dd>
+        <dt><span>Username</span></dt>
+        <dd>
+          <span>{{ targetsystem.username }}</span>
+        </dd>
       </dl>
 
       <button type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
