--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,12 +1,6 @@
 <div class="row">
-  <div class="col-md-3">
-    <span class="hipster img-fluid rounded"></span>
-  </div>
-
-  <div class="col-md-9">
-    <h1 class="display-4"><span>Welcome, Employee!</span> (Employeeonboardingsystem)</h1>
-
-    <p class="lead">This is your homepage</p>
+  <div class="col-md-12">
+    <h1 class="display-4"><span>Welcome to the Employeeonboardingsystem!</span></h1>
 
     <div [ngSwitch]="account !== null">
       <div class="alert alert-success" *ngSwitchCase="true">
