--- a/src/main/webapp/app/entities/targetsystemcredentials/list/targetsystemcredentials.component.html
+++ b/src/main/webapp/app/entities/targetsystemcredentials/list/targetsystemcredentials.component.html
@@ -96,7 +96,7 @@
 
               <button type="submit" class="btn btn-info btn-sm" (click)="downloadCsv(targetsystemcredentials.targetsystem!)">
                 <i class="fas fa-download"></i>
-                <span class="d-none d-md-inline"> Download {{ targetsystemcredentials.id }} </span>
+                <span class="d-none d-md-inline"> Download </span>
               </button>
             </div>
           </td>
