--- a/src/main/webapp/app/entities/targetsystem/detail/targetsystem-detail.component.html
+++ b/src/main/webapp/app/entities/targetsystem/detail/targetsystem-detail.component.html
@@ -56,6 +56,10 @@
         <dd>
           <span>{{ targetsystem.username }}</span>
         </dd>
+        <dt><span>CSV Attributes</span></dt>
+        <dd>
+          <span>{{ targetsystem.csvAttributes }}</span>
+        </dd>
       </dl>
 
       <button type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
