Generalisieren XML, JSON, Download

--- a/src/main/webapp/app/entities/targetsystem/update/targetsystem-update.component.html
+++ b/src/main/webapp/app/entities/targetsystem/update/targetsystem-update.component.html
@@ -24,6 +24,8 @@
             <option value="csv">CSV</option>
             <option value="db">Datenbank</option>
             <option value="ldap">LDAP</option>
+            <option value="xml">XML</option>
+            <option value="json">JSON</option>
           </select>
         </div>
 
