--- a/src/main/webapp/app/entities/targetsystemcredentials/list/targetsystemcredentials.component.html
+++ b/src/main/webapp/app/entities/targetsystemcredentials/list/targetsystemcredentials.component.html
@@ -94,9 +94,32 @@
                 <span class="d-none d-md-inline">Delete</span>
               </button>
 
-              <button type="submit" class="btn btn-info btn-sm" (click)="downloadCsv(targetsystemcredentials.targetsystem!)">
+              <button
+                *ngIf="targetsystemcredentials.targetsystem!.type == 'csv'"
+                type="submit"
+                class="btn btn-info btn-sm"
+                (click)="downloadCsv(targetsystemcredentials.targetsystem!)"
+              >
                 <i class="fas fa-download"></i>
-                <span class="d-none d-md-inline"> Download </span>
+                <span class="d-none d-md-inline"> Download CSV </span>
+              </button>
+              <button
+                *ngIf="targetsystemcredentials.targetsystem!.type == 'xml'"
+                type="submit"
+                class="btn btn-info btn-sm"
+                (click)="downloadXML(targetsystemcredentials.targetsystem!)"
+              >
+                <i class="fas fa-download"></i>
+                <span class="d-none d-md-inline">Download XML </span>
+              </button>
+              <button
+                *ngIf="targetsystemcredentials.targetsystem!.type == 'json'"
+                type="submit"
+                class="btn btn-info btn-sm"
+                (click)="downloadJSON(targetsystemcredentials.targetsystem!)"
+              >
+                <i class="fas fa-download"></i>
+                <span class="d-none d-md-inline">Download JSON </span>
               </button>
             </div>
           </td>
