--- a/src/main/webapp/app/entities/targetsystem/update/targetsystem-update.component.html
+++ b/src/main/webapp/app/entities/targetsystem/update/targetsystem-update.component.html
@@ -45,7 +45,7 @@
           <p></p>
         </div>
 
-        <div *ngIf="C.value == 'db'">
+        <div *ngIf="C.value == 'db' || C.value == 'ldap'">
           <div class="form-group" [formGroup]="editForm">
             <label class="form-control-label" for="field_url">Url</label>
             <input type="text" class="form-control" name="url" id="field_url" data-cy="url" formControlName="url" [(ngModel)]="url" />
@@ -75,6 +75,7 @@
             />
           </div>
         </div>
+
         <div>
           <button type="button" id="cancel-save" data-cy="entityCreateCancelButton" class="btn btn-secondary" (click)="previousState()">
             <fa-icon icon="ban"></fa-icon>&nbsp;<span>Cancel</span>
