--- a/src/main/webapp/app/entities/targetsystem/update/targetsystem-update.component.html
+++ b/src/main/webapp/app/entities/targetsystem/update/targetsystem-update.component.html
@@ -39,7 +39,7 @@
                 (change)="onCheckChange(onchecked.checked, i)"
                 [checked]="attributesBoolean[i]"
               />
-              {{ choice }}
+              {{ attributes[i] }}
             </label>
           </div>
           <p></p>
