--- a/src/main/webapp/app/entities/targetsystem/update/targetsystem-update.component.html
+++ b/src/main/webapp/app/entities/targetsystem/update/targetsystem-update.component.html
@@ -74,7 +74,7 @@
               [(ngModel)]="password"
             />
           </div>
-          <div class="form-group">
+          <div *ngIf="C.value == 'ldap'" class="form-group">
             <label class="form-control-label" for="user_dn">UserDn</label>
             <input
               type="text"
@@ -86,7 +86,7 @@
               [(ngModel)]="userDn"
             />
           </div>
-          <div class="form-group">
+          <div *ngIf="C.value == 'ldap'" class="form-group">
             <label class="form-control-label" for="base_dn">BaseDn</label>
             <input
               type="text"
